<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_mapview">

    <fragment
        android:id="@+id/nav_yourlunch"
        android:name="com.example.go4lunch.ui.yourlunch.YourLunchFragment"
        android:label="@string/menu_your_lunch"
        tools:layout="@layout/fragment_yourlunch" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.go4lunch.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.go4lunch.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_mapview"
        android:name="com.example.go4lunch.ui.mapview.MapViewFragment"
        android:label="@string/menu_bottom_mapview"
        tools:layout="@layout/fragment_mapview" />
    <fragment
        android:id="@+id/nav_listview"
        android:name="com.example.go4lunch.ui.listview.ListViewFragment"
        android:label="@string/menu_bottom_listview"
        tools:layout="@layout/fragment_listview"/>
    <fragment
        android:id="@+id/nav_workmates"
        android:name="com.example.go4lunch.ui.workmates.WorkmatesFragment"
        android:label="@string/menu_bottom_workmates"
        tools:layout="@layout/fragment_workmates"/>

</navigation>