<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/margin_ultrasmall">

    <TextView style="@style/TextViewPlaceName"
        android:id="@+id/tv_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/im_place"
        tools:text="@string/app_name" />

    <TextView style="@style/TextViewPlaceDistance"
        android:id="@+id/tv_place_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@id/im_place"
        app:layout_constraintTop_toTopOf="@id/im_place"
        tools:text="@string/app_name" />

    <TextView style="@style/TextViewPlaceAddress"
        android:id="@+id/tv_place_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:maxWidth="200dp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/im_workmate_icon_number"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        app:layout_constraintEnd_toStartOf="@id/tv_workmate_first_parenthesis"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        app:tint="@color/black" />

    <TextView style="@style/TextViewWorkmateParentheses"
        android:id="@+id/tv_workmate_first_parenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ultrasmall"
        android:text="@string/item_list_view_first_parenthesis"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        app:layout_constraintEnd_toStartOf="@id/tv_workmate_number"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name" />

    <TextView style="@style/TextViewWorkmateNumber"
        android:id="@+id/tv_workmate_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ultrasmall"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        app:layout_constraintEnd_toStartOf="@id/tv_workmate_last_parenthesis"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        tools:text="@string/item_list_view_workmate_number" />

    <TextView style="@style/TextViewWorkmateParentheses"
        android:id="@+id/tv_workmate_last_parenthesis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_ultrasmall"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/item_list_view_last_parenthesis"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        app:layout_constraintEnd_toStartOf="@id/im_place"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name" />

    <TextView style="@style/TextViewPlaceOpen"
        android:id="@+id/tv_place_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@id/im_place"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/app_name" />

    <RatingBar
        android:id="@+id/rb_list_view_rate"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_small"
        android:isIndicator="true"
        android:numStars="3"
        android:rating="0"
        android:stepSize="0.5"
        android:progressTint="@color/yellow"
        android:secondaryProgressTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="@id/im_place"
        app:layout_constraintEnd_toStartOf="@id/im_place" />

    <ImageView
        android:id="@+id/im_place"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:contentDescription="@string/item_list_view_place_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>